--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.2 # Souvent déjà là
   sqflite: ^2.3.0 # Dernière version au 5 juil. 2025
   path_provider: ^2.1.1 # Dernière version au 5 juil. 2025
+  sqflite_common_ffi: ^2.3.0+1
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +53,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/ # Ajouté cette ligne
+    - assets/images/
+    - assets/images/grand_alliances/
+    - assets/images/factions/
+    - assets/data/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
