--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,12 @@ dependencies:
   sqflite_common_ffi: ^2.3.0+1
   intl: ^0.18.1
   uuid: ^4.3.3
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0 # Souvent déjà là
+  flutter_lints: ^6.0.0 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
